@@ -657,3 +657,5 @@
 2018-10-15 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library ABI version to 15:0:0.
 	* Incremented the package version to 0.19.0.
+2019-02-02 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented the 'SyGpioServer::sendGpo()' method.
